// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserInfoComponent shallow tests should handle displayName correctly should show display name if it is passed 1`] = `
<app-user-info-component
  displayName={[Function String]}
  onExit={[Function EventEmitter]}
>
  app-user-info-component component stub
</app-user-info-component>
`;

exports[`UserInfoComponent shallow tests should handle photoURL correctly photoURL is not passed should match snapshot 1`] = `
<app-user-info-component
  onExit={[Function EventEmitter]}
  photoURL=""
>
  app-user-info-component component stub
</app-user-info-component>
`;

exports[`UserInfoComponent shallow tests should handle photoURL correctly photoURL is passed should match snapshot 1`] = `
<app-user-info-component
  onExit={[Function EventEmitter]}
  photoURL={[Function String]}
>
  app-user-info-component component stub
</app-user-info-component>
`;
